--- a/olimpiadas.css
+++ b/olimpiadas.css
@@ -1,151 +1,149 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.titulo{
-    display: flex;
-    max-height: 140px;
-    justify-content: end;
-    background: linear-gradient(to right,  #3706aa,  #08d45a);
-    color: white;
-    
+.titulo {
+  display: flex;
+  max-height: 140px;
+  justify-content: end;
+  background: linear-gradient(to right, #3706aa, #08d45a);
+  color: white;
 }
-header p{
-    margin-right: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    font-size: 3em;
-
+header p {
+  margin-right: auto;
+  margin-top: 65px;
+  margin-bottom: 40px;
+  font-size: 30px;
 }
 
-nav{
-    display: flex;
+nav {
+  display: flex;
 }
-.logo-olimpiadas{
-    max-height: 100px;
-    max-width: 100px;
-    margin: 15px;
+.logo-olimpiadas {
+  max-height: 100px;
+  max-width: 100px;
+  margin: 16px;
 }
-li{
-    display: inline-block;
-    padding: 40px 50px;
-    list-style: none;
-}
-
-img{
-    width: 100%;
+li {
+  display: inline-block;
+  padding: 40px 50px;
+  list-style: none;
 }
 
-section{
-    display: flex;
-    justify-content: center;
-    max-width: 100%;
-    flex-wrap: wrap;
-    margin: 0 auto;
+img {
+  width: 100%;
 }
 
-article{
-    border: solid  #3706aa 1px;
-    margin: 5px;
-    max-width: 380px;
+section {
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
-
-figure{
-    margin: 0;
+article {
+  border: solid #3706aa 1px;
+  margin: 5px;
+  max-width: 380px;
 }
 
-figcaption{
-    font-size: small;
-    padding: 5px;
-    color: #555;
-    
+figure {
+  margin: 0;
 }
 
-header{
-    color: #3706aa;
-    font-size: 17px;
-    padding: 7px;
+figcaption {
+  font-size: small;
+  padding: 5px;
+  color: #555;
 }
 
-input[type = checkbox]{
+header {
+  color: #3706aa;
+  font-size: 17px;
+  padding: 7px;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+.hamburguer {
+  display: none;
+  user-select: none;
+  font-size: 20px;
+}
+
+@media (max-width: 800px) {
+  .menu {
     display: none;
-}
-
-.hamburguer{
-    display: none;
-    user-select: none;
-    font-size: 20px;
-    
-}
-
-@media (max-width: 800px){
-    .menu {
-    display:none;
     position: absolute;
-    background-color:teal;
+    background-color: teal;
     right: 0;
     left: 0;
     text-align: center;
     padding: 16px 0;
-    
-    }
-    
-    .menu li:hover {
+  }
+
+  .menu li:hover {
     display: inline-block;
-    background-color:#4c9e9e;
+    background-color: #4c9e9e;
     transition: 0.3s ease;
-    }
-    
-    .menu li + li {
-        margin-top: 12px;
-    }
-        
-    input[type=checkbox]:checked ~ .menu{ 
-        display: block;
-    }
-    .hamburguer{
-        display: block;
-    }
+  }
 
-}
-.dark{
-    background-color:#03001C;
-    color: #301E67; 
-}
-.light{
-    background-color: #5B8FB9;
-    color: #B6EADA; 
-}
-.switch input{
-    left: calc(100% - 5px);
-    transform: translateX(-100%);
-}
-.switch label{
-    
-    display: flex; align-items: left;
-    position: relative; background-color: aliceblue;
-    border: 5px;
-    width: 60px;
-    height: 30px;
-    border-radius: 30px;
-    padding: 2px;
-    cursor: pointer;
-    transition: 2px;
+  .menu li + li {
+    margin-top: 12px;
+  }
 
-}
-switch label::after{
-    content: "";
+  input[type="checkbox"]:checked ~ .menu {
     display: block;
-    position: absolute;
-    left: 4px;
-    width: 29px;
-    height: 29px;
-    background-color: #03001C;
-    border-radius: 50%;
-    transition: left;
+  }
+  .hamburguer {
+    display: block;
+  }
 }
-
-.switch input:checked+label{background-color: black}
-.switch input:checked+label::after{left:calc(100%-30px)}
+.light {
+  background-color: #03001c;
+  color: #301e67;
+}
+.dark {
+  background-color: #ffffff;
+  color: teal;
+}
+.toggle input [type="checkbox"] {
+  display: none;
+}
+.toggle label {
+  justify-content: right;
+  display: flex;
+  align-items: right;
+  position: right;
+  background-color: #ffffff;
+  border: 5px;
+  width: 60px;
+  height: 30px;
+  border-radius: 30px;
+  padding: 2px;
+  cursor: pointer;
+  transition: 2px;
+}
+.toggle label::after {
+  justify-content: end;
+  display: block;
+  position: right;
+  right: 49px;
+  width: 29px;
+  height: 29px;
+  background-color: #000000;
+  border-radius: 50%;
+  transition: right;
+}
+.toggle input[type="checkbox"]:checked ~ label {
+  background-color: #000000;
+  border-color: #fffbfb;
+}
+.toggle input[type="checkbox"]:checked ~ label::after {
+  background-color: #000000;
+  transform: translateX(50px);
+}
